--- a/index.html
+++ b/index.html
@@ -12,14 +12,17 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <style>
     .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%);}
+    .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
 <body>
   <main class="main">
        <div class="product-container">
             <div class="product-img">
-              <img src="./images/image-product-desktop.jpg" alt="">
+              <picture>
+                <source media="(min-width: 650px)" srcset="./images/image-product-desktop.jpg">
+                <img src="./images/image-product-mobile.jpg">
+              </picture>
             </div>
             <div class="product-content">
               <span class="card-content">Perfume</span>
@@ -38,22 +41,3 @@
 
 </body>
 </html>
-
-<!-- 
-  Preview
-
-  Gabrielle Essence Eau De Parfum
-
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
-
-  $149.99
-  $169.99
-
-  Add to Cart
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
- -->
